Fix title truncation in Publications page

--- a/app/assets/stylesheets/tpi/_publications.scss
+++ b/app/assets/stylesheets/tpi/_publications.scss
@@ -128,7 +128,6 @@ $max-lines: 3;
       height: 1.7rem;
       background: white;
       margin-top: 0.2rem;
-      margin-right: 0.1rem;
     }
   }
 
